@@ -1,6 +1,7 @@
 buildscript {
 	ext {
-		springBootVersion = '2.5.4.RELEASE'
+//		springBootVersion = '2.1.0.RELEASE'
+		springBootVersion = '3.0.0.RELEASE'
 	}
 	repositories {
 		mavenCentral()
@@ -15,8 +16,12 @@ buildscript {
 
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '2.5.4'
-	id 'io.spring.dependency-management' version '1.1.4'
+//	id 'org.springframework.boot'
+//	id 'io.spring.dependency-management'
+	id 'org.springframework.boot' version '3.0.0'
+//	id 'io.spring.dependency-management' version '1.1.4'
+	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+
 	id 'jacoco'
 	id 'maven-publish'
 }
@@ -27,8 +32,8 @@ version = '0.0.1-SNAPSHOT'
 
 
 java {
-//	sourceCompatibility = '17'
-	sourceCompatibility = '1.8'
+	sourceCompatibility = '17'
+//	sourceCompatibility = '1.8'
 //	targetCompatability = '1.8'
 }
 
@@ -48,23 +53,33 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	implementation 'org.webjars:bootstrap:4.4.1'
-	annotationProcessor 'org.projectlombok:lombok'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	runtimeOnly'org.springframework.boot:spring-boot-devtools'
+//	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+//	testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo.spring30x:4.5.2'
+//	implementation group:'de.flapdoodle.embed', name:'de.flapdoodle.embed.mongo', version:"4.6.1"
+	implementation 'org.webjars:bootstrap:3.3.7-1'
+	implementation 'org.webjars:jquery:3.7.1'
 
-	implementation 'org.springframework.boot:spring-boot-starter-validation'
-//	implementation 'org.springframework.boot:spring-boot-gradle-plugin:3.1.2' *
-//	runtimeOnly'org.springframework.boot:spring-boot-devtools'
-	testImplementation 'junit:junit:4.13.1'
-//	implementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo'*
-//	implementation group: 'cz.jirutka.spring', name: 'embedmongo-spring', version: '1.3.1' *
+//	implementation 'org.slf4j:slf4j-api:1.6.1'
+	// SLF4J API
+	implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.9'
+	// SLF4J Log4j Implementation
+//	implementation group: 'org.slf4j', name: 'slf4j-log4j12', version: '2.0.9'
+
 	implementation 'org.hibernate.validator:hibernate-validator:6.2.0.Final'
-//	implementation 'mysql:mysql-connector-java:8.0.28'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'jakarta.validation:jakarta.validation-api:2.0.2'
 	implementation 'javax.servlet:javax.servlet-api:4.0.0'
-//	implementation 'org.slf4j:slf4j-api:2.0.1'
-//	compileOnly 'org.projectlombok:lombok'
+	compileOnly 'org.projectlombok:lombok'
+
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'junit:junit:4.13.1'
+	annotationProcessor 'org.projectlombok:lombok'
+
+//	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+//	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
+//	implementation 'org.springframework.boot:spring-boot-gradle-plugin:3.1.2' *
+// 	implementation 'mysql:mysql-connector-java:8.0.28'
 
 }
 
@@ -76,10 +91,10 @@ dependencies {
 //	dependsOn test
 //}
 
-//jacoco {
-//	toolVersion = "0.8.11"
-////	reportsDirectory = layout.buildDirectory.dir('customJacocoReportDir')
-//}
+tasks.withType(Test).configureEach {
+	jvmArgs = jvmArgs + ['--add-opens=java.base/java.util=ALL-UNNAMED']
+}
+
 
 //export test coverage
 jacocoTestReport {
